<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:foreground="@android:color/transparent"
    tools:context=".Pressure"
    tools:ignore="UnusedAttribute">

    <ImageView
        android:id="@+id/imageViewP"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/holo_blue_light"
        android:contentDescription="@string/copyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_heart" />

    <TextView
        android:id="@+id/tvNameSystemP"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/nameSystem"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewP" />

    <EditText
        android:id="@+id/etHiPressure"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/hiPressure"
        android:inputType="number"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameSystemP"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etLowPressure"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/lowPressure"
        android:inputType="number"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etHiPressure"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etPulse"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/pulse"
        android:inputType="number"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLowPressure"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <CheckBox
        android:id="@+id/cbTachycardia"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:text="@string/tachycardia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPulse"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbTachycardia"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/bSaveDataP"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/saveData"
        android:background="#3F51B5"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDate" />

</androidx.constraintlayout.widget.ConstraintLayout>