<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:foreground="@android:color/transparent"
    tools:context=".VitalSigns"
    tools:ignore="UnusedAttribute">

    <ImageView
        android:id="@+id/imageViewVS"
        android:layout_width="208dp"
        android:layout_height="208dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/holo_blue_light"
        android:contentDescription="@string/copyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_heart" />

    <TextView
        android:id="@+id/tvNameSystemVS"
        android:layout_width="340dp"
        android:layout_height="82dp"
        android:layout_marginTop="5dp"
        android:text="@string/nameSystem"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewVS" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="text"
        android:text="@string/weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameSystemVS"
        android:importantForAutofill="no"
        tools:ignore="LabelFor,TextFields" />

    <EditText
        android:id="@+id/numberSteps"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="text"
        android:text="@string/numberSteps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight"
        tools:ignore="LabelFor,TextFields"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/bSaveDataP"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/saveData"
        android:background="#3F51B5"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberSteps" />

</androidx.constraintlayout.widget.ConstraintLayout>