<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:foreground="@android:color/transparent"
    tools:context=".XResume"
    tools:ignore="UnusedAttribute">

    <ImageView
        android:id="@+id/imageViewX"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/holo_blue_light"
        android:contentDescription="@string/copyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_heart" />

    <TextView
        android:id="@+id/tvNameSystemX"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/nameSystem"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewX" />

    <TextView
        android:id="@+id/tvResume"
        android:layout_width="340dp"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        android:text=""
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameSystemX" />

    <Button
        android:id="@+id/bExit"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/exit"
        android:background="#3F51B5"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResume" />

</androidx.constraintlayout.widget.ConstraintLayout>